--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-transition-group": "^4.4.0",
     "elemental": "^0.6.1",
     "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
+    "expo-image-picker": "~9.2.0",
     "expo-keep-awake": "^9.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.4",
