--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/react-transition-group": "^4.4.0",
     "elemental": "^0.6.1",
     "expo": "~40.0.0",
-    "expo-camera": "~9.1.0",
-    "expo-image-picker": "~9.2.0",
+    "expo-camera": "^9.1.1",
+    "expo-image-picker": "^9.2.1",
     "expo-keep-awake": "^9.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.4",
@@ -29,7 +29,7 @@
     "react-native-screens": "^2.15.2",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.11",
+    "react-native-web": "^0.11.7",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
