--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^5.14.0",
     "@types/react-transition-group": "^4.4.0",
     "elemental": "^0.6.1",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-camera": "^9.1.1",
     "expo-image-picker": "^9.2.1",
     "expo-keep-awake": "^9.0.0",
